Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112227

qmlsc: QQmlProperlyLists assignment to QML lists cannot be compiled

XMLWordPrintable

    • a3f2857eb (dev), fa259ed4f (dev), 653a6ff82 (dev)

      Warning: listproperty-warnings.qml:19:48: Cannot assign binding of type QQmlListProperty<Controller> to QObjectList [incompatible-type]
              property list<Controller> controllers: cppModel.controllers
                                                     ^^^^^^^^^^^^^^^^^^^^
      Warning: listproperty-warnings.qml:19:68: Could not compile binding for controllers: cannot convert from QQmlListProperty<QObject> of CppModel::controllers with type Controller to QObjectList of QObjectList [compiler]
      Warning: listproperty-warnings.qml:29:52: Could not compile binding for text: Member foo of Controller of (component in /home/jopoikel/work/customer/build-qmlpropertylist-Desktop_Qt_6_5_0_GCC_64bit-Debug/src/listproperty-warnings.qml)::modelData with type Controller can be shadowed [compiler]
                          text: `Controller: ${modelData.foo}`
                                                         ^^^
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes