src/qml/qml/qqmllist.h
@@ -84,24 +84,45 @@ public:
     ReplaceFunction replace = nullptr;
     RemoveLastFunction removeLast = nullptr;
 
+    template<typename List>
+    List toList()
+    {
+        if constexpr (std::is_same_v<List, QList<T *>>) {
+            if (append == qlist_append)
+                return *static_cast<QList<T *> *>(data);
+        }
+
+        const qsizetype size = count(this);
+
+        List result;
+        if constexpr (QContainerInfo::has_reserve_v<List>)
+            result.reserve(size);
+
+        static_assert(QContainerInfo::has_push_back_v<List>);
+        for (qsizetype i = 0; i < size; ++i)
+            result.push_back(at(this, i));
+
+        return result;
+    }
+
 private:
     static void qlist_append(QQmlListProperty *p, T *v) {
-        reinterpret_cast<QList<T *> *>(p->data)->append(v);
+        static_cast<QList<T *> *>(p->data)->append(v);
     }
     static qsizetype qlist_count(QQmlListProperty *p) {
-        return reinterpret_cast<QList<T *> *>(p->data)->size();
+        return static_cast<QList<T *> *>(p->data)->size();
     }
     static T *qlist_at(QQmlListProperty *p, qsizetype idx) {
-        return reinterpret_cast<QList<T *> *>(p->data)->at(idx);
+        return static_cast<QList<T *> *>(p->data)->at(idx);
     }
     static void qlist_clear(QQmlListProperty *p) {
-        return reinterpret_cast<QList<T *> *>(p->data)->clear();
+        return static_cast<QList<T *> *>(p->data)->clear();
     }
     static void qlist_replace(QQmlListProperty *p, qsizetype idx, T *v) {
-        return reinterpret_cast<QList<T *> *>(p->data)->replace(idx, v);
+        return static_cast<QList<T *> *>(p->data)->replace(idx, v);
     }
     static void qlist_removeLast(QQmlListProperty *p) {
-        return reinterpret_cast<QList<T *> *>(p->data)->removeLast();
+        return static_cast<QList<T *> *>(p->data)->removeLast();
     }
 
     static void qslow_replace(QQmlListProperty<T> *list, qsizetype idx, T *v)
