tests/auto/qml/qmlcppcodegen/data/listConversion.qml
@@ -1,0 +1,15 @@
+pragma Strict
+import QtQml
+import TestTypes
+
+BirthdayParty {
+    id: self
+
+    guests: [
+        Person { name: "Horst 1" },
+        Person { name: "Horst 2" },
+        Person { name: "Horst 3" }
+    ]
+
+    property list<QtObject> o: self.guests
+}
